change detaction and async pipe

--- a/directives/src/app/app.html
+++ b/directives/src/app/app.html
@@ -1,3 +1,5 @@
+<app-link></app-link>
+
 <a
   href="https://www.google.com/"
   appSafeLink="google"
@@ -20,3 +22,5 @@
 @for (n of luckyNumbers; track $index) {
 <p>{{ n }}</p>
 }
+
+<app-manual-change-detection></app-manual-change-detection>
